<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/neww"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_gallery"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/menu_gallery" />
    <item
        android:id="@+id/nav_slideshow"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/menu_slideshow" />
    <item
        android:id="@+id/nav_tools"
        android:icon="@drawable/favorite"
        android:title="@string/menu_tools" />

    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/evalua"
        android:title="@string/menu_share" />
    <item
        android:onClick="bbb"
        android:id="@+id/nav_send"
        android:icon="@drawable/logout"
        android:title="@string/menu_send" />


</menu>
