<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateAccount">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dang_nhap"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/moinhap">

    </EditText>
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/passwork"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="8dp">

</TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:hint="@string/moinhapmatkhau">

    </EditText>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwork"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:hint="@string/nhaplaimatkhau">

    </EditText>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="107dp">

        <Button
            android:onClick="exit"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"
            android:id="@+id/button2"
            android:layout_width="135dp"
            android:layout_height="69dp"
            android:layout_marginStart="68dp"
            android:layout_marginLeft="68dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:text="@string/exit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.578">

        </Button>

        <Button
            android:onClick="add"
            android:id="@+id/button"
            android:layout_width="124dp"
            android:layout_height="67dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginEnd="56dp"
            android:layout_marginRight="56dp"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6"
            android:textColor="@color/colorWhite"
            android:background="@color/colorBlue">

        </Button>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>