<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="214dp"
        android:src="@drawable/anhlogin">
    </ImageView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:src="@drawable/logo">
    </ImageView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dang_nhap"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

    </TextView>
    <EditText
        android:id="@+id/edtUserNam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

    </EditText>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwork"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

    </TextView>
    <EditText
        android:id="@+id/edtPassWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:inputType="textPassword">

    </EditText>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="395dp"
        android:layout_height="39dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/ckbRememberPassword"
            android:layout_width="33dp"
            android:layout_height="29dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.375"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"></CheckBox>

        <TextView
            android:id="@+id/textView"
            android:layout_width="242dp"
            android:layout_height="22dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="110dp"
            android:layout_marginRight="110dp"
            android:layout_marginBottom="10dp"
            android:text="@string/remember"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/colorBlue"
        android:textColor="@color/colorWhite"
        android:onClick="login">

    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dang_ky"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorBlue"
        android:textColor="@color/colorWhite"
        android:onClick="dangky">

    </Button>




</LinearLayout>